--- a/Exercises/07 Exercises.ipynb
+++ b/Exercises/07 Exercises.ipynb
@@ -82,7 +82,18 @@
    },
    "outputs": [],
    "source": [
-    "..."
+    "import math
+import numpy as np
+
+# built - in operator
+# 2 arrays of length 1.0e6
+
+x = np.ones(1000000)
+y = np.zeros(len(x))
+
+z1 = x + y
+print("Time using vectorisation:")
+%time z1 = x + y"
    ]
   },
   {
